--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,34 @@
- @import "tailwindcss";
- @plugin "daisyui";
- @plugin "daisyui" {
+/*  Google Fonts import MUST be first */
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700;900&display=swap');
+
+/*  Tailwind base import */
+@import "tailwindcss";
+
+/* DaisyUI plugin */
+@plugin "daisyui";
+@plugin "daisyui" {
   themes: light --default, dark --prefersdark;
-  themes: light --default;
- }
+}
+
+/* Global font for all elements */
+*,
+*::before,
+*::after {
+  font-family: 'DM Sans', sans-serif;
+  font-optical-sizing: auto;
+}
+
+/* React Toastify Custom Colors */
+:root {
+  --toastify-color-success: #0092b8 !important;
+  --toastify-icon-color-success: #0092b8 !important;
+}
+
+.Toastify__toast {
+  border-radius: 16px !important;
+  font-family: inherit;
+}
+
+.Toastify__progress-bar--success {
+  background: #0092b8 !important;
+}
